--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: jjf
 Title: RStudio Addins
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: person("John", "Fox", email = "john.fox@realityminers.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Description: A set of functions, RStudio addins and Shiny gadgets to make life easier
 Depends: R (>= 3.4.2)
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
