--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: jjf
 Title: RStudio Addins
-Version: 0.0.3
+Version: 0.0.4
 Authors@R: person("John", "Fox", email = "john.fox@realityminers.com", role = c("aut", "cre"))
-Description: A set of functions, RStudio addins and Shiny gadgets to make life easier
+Description: A set of functions, RStudio addins and Shiny gadgets to make life easier.
 Depends: R (>= 3.1.0)
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
+Suggests: 
+    rstudioapi
