--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Suggests: 
-    rstudioapi
+Imports: 
+    jsonlite,
+    rstudioapi,
+    dplyr,
+    glue,
+    readr
