--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: RStudio Addins
 Version: 0.0.4
 Authors@R: person("John", "Fox", email = "john.fox@realityminers.com", role = c("aut", "cre"))
 Description: A set of functions, RStudio addins and Shiny gadgets to make life easier.
-Depends: R (>= 3.1.0)
+Depends: R (>= 3.2.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -13,4 +13,5 @@ Imports:
     rstudioapi,
     dplyr,
     glue,
-    readr
+    readr,
+    devtools
