--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(get_os)
 export(get_shortcut_dir)
 export(get_shortcut_filenames)
 export(restore_keyboard_shortcuts)
-importFrom(devtools,use_data)
+importFrom(usethis,use_data)
 importFrom(glue,glue)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
