--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+*.nb.html
 .Rproj.user
 
 # Temporary files created by R markdown
